feat(service): Add metricas