@@ -1,135 +1,122 @@
 package com.example.SalesHub.repository.customImpl;
 
-import com.example.SalesHub.configuration.JpaQueryFactoryConfig;
 import com.example.SalesHub.dto.filter.HistoricoFilter;
-import com.example.SalesHub.model.Estoque;
-import com.example.SalesHub.model.Historico;
-import com.example.SalesHub.model.Produto;
-import com.example.SalesHub.model.Usuario;
-import jakarta.persistence.EntityManager;
+import com.example.SalesHub.dto.projection.HistoricoProjection;
+import com.example.SalesHub.model.QHistorico;
+import com.querydsl.core.types.Expression;
+import com.querydsl.core.types.OrderSpecifier;
+import com.querydsl.core.types.Predicate;
+import com.querydsl.jpa.impl.JPAQuery;
+import com.querydsl.jpa.impl.JPAQueryFactory;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayNameGeneration;
 import org.junit.jupiter.api.DisplayNameGenerator;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
-import org.springframework.context.annotation.Import;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 
+import java.math.BigDecimal;
 import java.time.LocalDateTime;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.anyLong;
+import static org.mockito.Mockito.lenient;
 
-@DataJpaTest
-@Import({HistoricoRepositoryImpl.class, JpaQueryFactoryConfig.class})
+@ExtendWith(MockitoExtension.class)
 @DisplayNameGeneration(DisplayNameGenerator.ReplaceUnderscores.class)
 class HistoricoRepositoryImplTest {
 
-    @Autowired
-    private HistoricoRepositoryImpl repositoryCustom;
+    @Mock
+    private JPAQueryFactory queryFactory;
 
-    @Autowired
-    private EntityManager entityManager;
+    @Mock
+    private JPAQuery<HistoricoProjection> jpaQuery;
 
-    private Historico historicoPersistido;
+    @Mock
+    private JPAQuery<Long> countQuery;
+
+    @InjectMocks
+    private HistoricoRepositoryImpl repository;
+
+    private HistoricoFilter filter;
+    private Pageable pageable;
+    private HistoricoProjection projection;
 
     @BeforeEach
+    @SuppressWarnings("unchecked")
     void setup() {
-        var usuario = Usuario.builder()
-                .nome("Admin")
-                .email("admin@email.com")
-                .senha("123456")
-                .ativo(true)
-                .build();
-        entityManager.persist(usuario);
+        var quantidade = new BigDecimal("5.00");
 
-        var produto = Produto.builder()
-                .nome("Notebook")
-                .descricao("Descricao do Produto")
-                .ativo(true)
-                .build();
-        entityManager.persist(produto);
-
-        var estoque = Estoque.builder()
-                .produto(produto)
-                .quantidadeAtual(10L)
-                .quantidadeInicial(10L)
-                .ativo(true)
-                .build();
-        entityManager.persist(estoque);
-
-        historicoPersistido = Historico.builder()
-                .usuario(usuario)
-                .produto(produto)
-                .estoque(estoque)
-                .criadoEm(LocalDateTime.now())
+        filter = HistoricoFilter.builder()
+                .id(1L)
+                .usuarioId(10L)
+                .produtoId(20L)
+                .estoqueId(30L)
+                .quantidadeRetirada(quantidade)
                 .build();
 
-        entityManager.persist(historicoPersistido);
-        entityManager.flush();
-        entityManager.clear();
+        pageable = PageRequest.of(0, 10);
+
+        projection = new HistoricoProjection(
+                1L,
+                10L,
+                20L,
+                30L,
+                quantidade,
+                LocalDateTime.now()
+        );
     }
 
     @Test
-    void deve_buscar_historico_filtrando_por_id() {
-        var filter = HistoricoFilter.builder()
-                .id(historicoPersistido.getId())
-                .build();
-        var pageable = PageRequest.of(0, 10);
+    @SuppressWarnings("unchecked")
+    void deve_buscar_historico_com_todos_os_filtros_e_retornar_pagina() {
+        lenient().when(queryFactory.select(any(Expression.class))).thenReturn((JPAQuery) jpaQuery).thenReturn((JPAQuery) countQuery);
 
-        var resultado = repositoryCustom.buscarHistorico(filter, pageable);
+        lenient().when(jpaQuery.from(any(QHistorico.class))).thenReturn(jpaQuery);
+        lenient().when(jpaQuery.where(any(Predicate.class))).thenReturn(jpaQuery);
+        lenient().when(jpaQuery.orderBy(any(OrderSpecifier.class))).thenReturn(jpaQuery);
+        lenient().when(jpaQuery.offset(anyLong())).thenReturn(jpaQuery);
+        lenient().when(jpaQuery.limit(anyLong())).thenReturn(jpaQuery);
+        lenient().when(jpaQuery.fetch()).thenReturn(List.of(projection));
 
-        assertThat(resultado.getContent()).hasSize(1);
-        assertThat(resultado.getContent().getFirst().id()).isEqualTo(historicoPersistido.getId());
+        lenient().when(countQuery.from(any(QHistorico.class))).thenReturn(countQuery);
+        lenient().when(countQuery.where(any(Predicate.class))).thenReturn(countQuery);
+        lenient().when(countQuery.fetchFirst()).thenReturn(1L);
+
+        var resultado = repository.buscarHistorico(filter, pageable);
+
+        assertThat(resultado).isNotNull();
+        assertThat(resultado.getTotalElements()).isEqualTo(1L);
+        assertThat(resultado.getContent().get(0).id()).isEqualTo(1L);
     }
 
     @Test
-    void deve_buscar_historico_filtrando_por_usuario_id() {
-        var filter = HistoricoFilter.builder()
-                .usuarioId(historicoPersistido.getUsuario().getId())
-                .build();
-        var pageable = PageRequest.of(0, 10);
+    @SuppressWarnings("unchecked")
+    void deve_buscar_historico_sem_filtros_com_sucesso() {
+        var filtroVazio = HistoricoFilter.builder().build();
 
-        var resultado = repositoryCustom.buscarHistorico(filter, pageable);
+        lenient().when(queryFactory.select(any(Expression.class))).thenReturn((JPAQuery) jpaQuery).thenReturn((JPAQuery) countQuery);
 
-        assertThat(resultado.getContent()).isNotEmpty();
-        assertThat(resultado.getContent().getFirst().usuarioId()).isEqualTo(historicoPersistido.getUsuario().getId());
-    }
+        lenient().when(jpaQuery.from(any(QHistorico.class))).thenReturn(jpaQuery);
+        lenient().when(jpaQuery.where(any(Predicate.class))).thenReturn(jpaQuery);
+        lenient().when(jpaQuery.orderBy(any(OrderSpecifier.class))).thenReturn(jpaQuery);
+        lenient().when(jpaQuery.offset(anyLong())).thenReturn(jpaQuery);
+        lenient().when(jpaQuery.limit(anyLong())).thenReturn(jpaQuery);
+        lenient().when(jpaQuery.fetch()).thenReturn(List.of());
 
-    @Test
-    void deve_buscar_historico_filtrando_por_produto_id() {
-        var filter = HistoricoFilter.builder()
-                .produtoId(historicoPersistido.getProduto().getId())
-                .build();
-        var pageable = PageRequest.of(0, 10);
+        lenient().when(countQuery.from(any(QHistorico.class))).thenReturn(countQuery);
+        lenient().when(countQuery.where(any(Predicate.class))).thenReturn(countQuery);
+        lenient().when(countQuery.fetchFirst()).thenReturn(0L);
 
-        var resultado = repositoryCustom.buscarHistorico(filter, pageable);
+        var resultado = repository.buscarHistorico(filtroVazio, pageable);
 
-        assertThat(resultado.getContent()).hasSize(1);
-        assertThat(resultado.getContent().getFirst().produtoId()).isEqualTo(historicoPersistido.getProduto().getId());
-    }
-
-    @Test
-    void deve_retornar_vazio_quando_nenhum_historico_corresponder_ao_filtro() {
-        var filter = HistoricoFilter.builder()
-                .id(999L)
-                .build();
-        var pageable = PageRequest.of(0, 10);
-
-        var resultado = repositoryCustom.buscarHistorico(filter, pageable);
-
-        assertThat(resultado.getContent()).isEmpty();
+        assertThat(resultado).isNotNull();
         assertThat(resultado.getTotalElements()).isZero();
-    }
-
-    @Test
-    void deve_respeitar_paginacao_na_consulta_de_historico() {
-        var filter = HistoricoFilter.builder().build();
-        var pageable = PageRequest.of(0, 1);
-
-        var resultado = repositoryCustom.buscarHistorico(filter, pageable);
-
-        assertThat(resultado.getContent()).hasSize(1);
-        assertThat(resultado.getSize()).isEqualTo(1);
     }
 }
